--- a/app/views/figures/new.erb
+++ b/app/views/figures/new.erb
@@ -1,7 +1,7 @@
 <h1>Create New Figure</h1>
 <form action="/figures" method="POST">
   <label>Name: </label>
-  <input type="text" name="figure_name" id="figure_name">
+  <input type="text" name="figure[name]" id="figure_name">
   <br>
   
   <label>Title: </label>
