--- a/app/views/figures/new.erb
+++ b/app/views/figures/new.erb
@@ -9,5 +9,8 @@
   <% end %>
   <br>
   
-  
+  <% Landmark.all.each do |landmark| %>
+    <input type="checkbox" name="figure[landmark_ids][]" id="<%= landmark.name %>" value="<%= landmark.id %>"><%= landmark.name %></input>
+  <% end %>
+  <br>
 </form>
