Automatically backed up by Learn

--- a/app/views/figures/new.erb
+++ b/app/views/figures/new.erb
@@ -13,4 +13,5 @@
     <input type="checkbox" name="figure[landmark_ids][]" id="<%= landmark.name %>" value="<%= landmark.id %>"><%= landmark.name %></input>
   <% end %>
   <br>
+  <input type="submit" value="Create">
 </form>
