--- a/app/views/figures/new.erb
+++ b/app/views/figures/new.erb
@@ -5,12 +5,12 @@
   <br>
   
   <% Title.all.each do |title| %>
-    <input type="checkbox" name="figure[title_ids][]" id="<%= title.name %>" value="<%= title.id %>"><%= title.name %></input>
+    <input type="checkbox" name="figure[title_ids][]" id="title_<%= title.id %>" value="<%= title.id %>"><%= title.name %></input>
   <% end %>
   <br>
   
   <% Landmark.all.each do |landmark| %>
-    <input type="checkbox" name="figure[landmark_ids][]" id="<%= landmark.name %>" value="<%= landmark.id %>"><%= landmark.name %></input>
+    <input type="checkbox" name="figure[landmark_ids][]" id="landmark_<%= landmark.id %>" value="<%= landmark.id %>"><%= landmark.name %></input>
   <% end %>
   <br>
   <input type="submit" value="Create">
