Automatically backed up by Learn

--- a/app/views/figures/new.erb
+++ b/app/views/figures/new.erb
@@ -13,5 +13,5 @@
     <input type="checkbox" name="figure[landmark_ids][]" id="landmark_<%= landmark.id %>" value="<%= landmark.id %>"><%= landmark.name %></input>
   <% end %>
   <br>
-  <input type="submit" value="Create">
+  <input type="submit" value="Create New Figure">
 </form>
