--- a/app/views/figures/new.erb
+++ b/app/views/figures/new.erb
@@ -13,5 +13,9 @@
     <input type="checkbox" name="figure[landmark_ids][]" id="landmark_<%= landmark.id %>" value="<%= landmark.id %>"><%= landmark.name %></input>
   <% end %>
   <br>
+  
+  <input type="text" name="landmark[name]" id="new_landmark">
+  <br>
+  
   <input type="submit" value="Create New Figure">
 </form>
