Automatically backed up by Learn

--- a/app/views/figures/new.erb
+++ b/app/views/figures/new.erb
@@ -14,7 +14,12 @@
   <% end %>
   <br>
   
+  <label>New Landmark: </label>
   <input type="text" name="landmark[name]" id="new_landmark">
+  <br>
+  
+  <label>New Title: </label>
+  <input type="text" name="title[name]" id="new_title">
   <br>
   
   <input type="submit" value="Create New Figure">
