--- a/app/views/figures/edit.erb
+++ b/app/views/figures/edit.erb
@@ -6,7 +6,7 @@
   <br>
   
   <% Title.all.each do |title| %>
-    <input type="checkbox" name="figure[title_ids][]" id="title_<%= title.id %>" value="<%= title.id %>"><%= title.name %></input>
+    <input type="checkbox" name="figure[title_ids][]" id="title_<%= title.id %>" value="<%= title.id %>" <%= 'checked' if @figure.titles.include?(title) %>><%= title.name %></input>
   <% end %>
   <br>
   
