--- a/app/views/figures/edit.erb
+++ b/app/views/figures/edit.erb
@@ -11,7 +11,7 @@
   <br>
   
   <% Landmark.all.each do |landmark| %>
-    <input type="checkbox" name="figure[landmark_ids][]" id="landmark_<%= landmark.id %>" value="<%= landmark.id %>"><%= landmark.name %></input>
+    <input type="checkbox" name="figure[landmark_ids][]" id="landmark_<%= landmark.id %>" value="<%= landmark.id %>" <%= 'checked' if @figure.landmarks.include?(landmark) %>><%= landmark.name %></input>
   <% end %>
   <br>
   
