--- a/app/views/figures/show.erb
+++ b/app/views/figures/show.erb
@@ -7,7 +7,7 @@
 </ul>
 <h2>Landmarks</h2>
 <ul>
-  <% @figure.landmarks.each do |title| %>
+  <% @figure.landmarks.each do |landmark| %>
   <li><%= landmark.name %></li>
   <% end %>
 </ul>
