--- a/app/views/landmarks/index.erb
+++ b/app/views/landmarks/index.erb
@@ -1,6 +1,9 @@
 <h2>All Historical Landmarks</h2>
 
 <!-- add content here -->
-
+<ul>
+  <% @landmarks.each do |landmark| %>
+  <li></li>
+</ul>
 <a class="button" href="/figures">Figures</a>
 <a class="button" href="/">Home</a>
