--- a/app/views/landmarks/new.erb
+++ b/app/views/landmarks/new.erb
@@ -5,6 +5,9 @@
   <label>Name: </label>
   <input type="text" name="landmark[name]">
   <br>
+  <label>Year Completed: </label>
+  <input type="text" name="landmark[title]">
+  <br>
   <input type="submit" value="Create New Landmark">
 </form>
 <a class="button" href="/landmarks">Landmarks</a>
