Automatically backed up by Learn

--- a/app/views/landmarks/new.erb
+++ b/app/views/landmarks/new.erb
@@ -6,7 +6,7 @@
   <input type="text" name="landmark[name]">
   <br>
   <label>Year Completed: </label>
-  <input type="text" name="landmark[title]">
+  <input type="text" name="landmark[year_completed]">
   <br>
   <input type="submit" value="Create New Landmark">
 </form>
