--- a/app/views/landmarks/new.erb
+++ b/app/views/landmarks/new.erb
@@ -3,10 +3,10 @@
 <!-- add content here -->
 <form action="/landmarks" method="POST">
   <label>Name: </label>
-  <input type="text" name="landmark[name]">
+  <input type="text" name="landmark[name]" id="landmark_name">
   <br>
   <label>Year Completed: </label>
-  <input type="text" name="landmark[year_completed]">
+  <input type="text" name="landmark[year_completed]" id="landmark_name">
   <br>
   <input type="submit" value="Create New Landmark">
 </form>
