--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -1,7 +1,7 @@
 <h2>Edit Historical Landmark</h2>
 
 <!-- add content here -->
-
+<form action="/landmarks/<%= @landmark.id %>"></form>
 
 <a class="button" href="/landmarks">Landmarks</a>
 <a class="button" href="/">Home</a>
