--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -1,7 +1,16 @@
 <h2>Edit Historical Landmark</h2>
 
 <!-- add content here -->
-<form action="/landmarks/<%= @landmark.id %>"></form>
+<form action="/landmarks/<%= params[:id] %>">
+  <input id="hidden" type="hidden" name="_method" value="patch">
+  <label>New Name: </label>
+  <input type="text" name="landmark[name]" id="new_name">
+  <br>
+  <label>New Year Completed: </label>
+  <input type="text" name="landmark[year_completed" id="new_year">
+  <br>
+  <input type="submit" value="Edit Landmark">
+</form>
 
 <a class="button" href="/landmarks">Landmarks</a>
 <a class="button" href="/">Home</a>
