--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -4,10 +4,10 @@
 <form action="/landmarks/<%= params[:id] %>">
   <input id="hidden" type="hidden" name="_method" value="patch">
   <label>New Name: </label>
-  <input type="text" name="landmark[name]" id="new_name">
+  <input type="text" name="landmark[name]" id="name">
   <br>
   <label>New Year Completed: </label>
-  <input type="text" name="landmark[year_completed" id="new_year">
+  <input type="text" name="landmark[year_completed]" id="year">
   <br>
   <input type="submit" value="Edit Landmark">
 </form>
