--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -1,5 +1,5 @@
 <h2>Edit Historical Landmark</h2>
-
+<h3><%= "#{@landmark.name}, #{@landmark.year_completed}"%></h3>
 <!-- add content here -->
 <form action="/landmarks/<%= params[:id] %>">
   <input id="hidden" type="hidden" name="_method" value="patch">
