--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -7,7 +7,7 @@
   <input type="text" name="landmark[name]" id="name">
   <br>
   <label>New Year Completed: </label>
-  <input type="text" name="landmark[year_completed]" id="year">
+  <input type="text" name="landmark[year_completed]" id="year_completed">
   <br>
   <input type="submit" value="Edit Landmark">
 </form>
