--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -1,7 +1,7 @@
 <h2>Edit Historical Landmark</h2>
 <h3><%= "#{@landmark.name}, #{@landmark.year_completed}"%></h3>
 <!-- add content here -->
-<form action="/landmarks/<%= params[:id] %>">
+<form action="/landmarks/<%= params[:id] %>" method="POST">
   <input id="hidden" type="hidden" name="_method" value="patch">
   <label>New Name: </label>
   <input type="text" name="landmark[name]" id="name">
